<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/order_by_key"
        android:title="@string/order_by_label" />

    <ListPreference
        android:defaultValue="@string/page_size_ten"
        android:entries="@array/page_size_labels"
        android:entryValues="@array/page_size_options"
        android:key="@string/settings_page_size_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/settings_page_size_label" />

</PreferenceScreen>